index.css
/* ... */
#plant-description-list li{
    display: inline;
    
    
}

#plant-description-list{
    position: relative;
    right: 39px;
    line-height: .9;
    
}

#growth-requirements{
    line-height: 1.25;
}



#growth-requirements-list li + li::before{
    content: "\2022";  
    color: #A2CCFA; 
    font-size: 30px;
    position: relative;
    top: 5px;
    padding-right: 10px;
    font-weight: bold; 
    display: inline-block; 
    padding-left: 10px;
    
}

#growth-requirements-list{
    position: relative;
    right: 39px;
}

#growth-requirements-list li{
    display: inline;
}



.info-header{
    color: #A2CCFA;
}

.bottom-border{
    border-bottom: 2px solid #A2CCFA;
}



/* Footer */
footer{
    display: flex;
    justify-content: space-between;
    background-color: #A2CCFA;
    font-size: .75rem;
    padding: 0 10px;
    margin-top: 4em;
   
}

footer p:hover{
    text-decoration: underline;
    cursor: pointer;
}

.footer-icon{
    width: 20px;
    height: auto;
    align-self: center;
}

#plantlist-library{
    display: inline-flex;
}

#plantlist-library p{
    padding-left: 5px;
}

#footer-option{
    display: inline-flex;
}

#footer-option p{
    padding-right: 20px;
}

#footer-option img{
    width: 30px;
}


#tutorial-menu{
    display: inline-flex;
}










/* MEDIA QUERIES */

@media only screen and (max-width: 1295px) {
    body{
        width: 100%;
    }

    .nav-link{
        position: relative;
        left: 20px;
        bottom: 30px;
        padding: 0;
        margin-right: 20px;
    }
    nav{
        width: 55%
    }

    #selected-plant{
        position: relative;
        left: 1em;
    }

    #toggle-category{
        right: 1em;
    }

    #header h4{
        font-size: .85rem;
    }

    .nav-link{
        top: 10px;
    }
    #user, button{
        right: 5px;
    }

    #preview-images{
        width: 90%;
    }
}


@media only screen and (max-width: 1044px){
    header{
        height: 140px;
    }

     nav{
        width: 100%;
        top: 70px;
        width: 100%;
        right: 5px;
    } 

    .nav-link{
        
        margin-left: 10px;
        font-size: 1.5rem;
        padding: 0 30px;
        position: relative;
    }
    #header h4{
        font-size: 1rem;
    }

}

@media only screen and (max-width: 852px){
   
    .nav-link{
        left: 1em;
        padding: 0 5px;
    }
    #preview-images{
        width: 88%;
    }
}

@media only screen and (max-width: 705px){
    #header h4{
        font-size: .95rem;
    }
}

@media only screen and (max-width: 700px){

#plant-and-map-container{

    display: grid;
    grid-template-areas: initial;
    grid-template-areas: "image"
                         "preview"
                         "map";
    grid-template-rows: 425px 90px 425px;
    grid-template-columns: 100%;
    position: relative;
    bottom: 3.5em;
    column-gap: 10px;
    row-gap: 10px;
    margin: auto;
    justify-content: center;
    overflow: hidden;

}


#scroll-showcase-backward{
    top: 11em;
}

#scroll-showcase-forward{
    top: 11em;
}

header{
    display: none;
}

#mobile-container{
    width: 100%;
    border-bottom: solid 5px #A2CCFA;
}

#mobile-header{
    display: flex;
    justify-content: space-between;
    padding-bottom: .5em;
    padding-top: .5em;
    width: 90%;
    margin: auto;
    
    
}
#mobile-header img{
    align-self: center;
}

#mobile-logo{
    width: 200px;
    height: auto;
}

.mobile-icon{
    width: 27px;
    height: auto;
    padding: 10px;
    border-radius: 5px;
}

.mobile-icon:hover{
    background-color: #EDF5FE;
    transition: background-color ease-out 300ms;
    cursor: pointer;
}

.mobile-icon:active{
    background-color: #EDF5FE;
    
}

#menu-dropdown{
    display: none;
    position: absolute;
    top: 4em;
    left: 3em;
    z-index: 1;
    background-color: whitesmoke;
    font-size: .8rem;
    padding: 0 10px;
    border-radius: 10px;
    align-content: center;
    width: 100px;
    animation: dropDown 200ms ease-in
    
}


@keyframes dropDown{
 
    0%{
        opacity: 0
    }
    100%{
        opacity: 1
    }

}

.dropdown-option{
    border-bottom: #A2CCFA 2px solid;
    font-size: .8rem;
    color: black;
}

a{
    text-decoration: none;
}


.dropdown-option:hover{
    font-weight: bold;
    cursor: pointer;
    
}
.dropdown-option:active{
    font-weight: bold;
    text-decoration: none;
}

.dropdown-option:visited{
    text-decoration: none; 
}

#selected-plant h2{
    position: relative;
    bottom: .7em;
    margin-bottom: 2em;
}

#scientific-name{
    position: relative;
    top: .6em;
    right: 9.2em;
}


#preview-images{
    width: 100%;
    overflow: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

#preview-images::-webkit-scrollbar{
    display: none;
}

#add-plant-icon{
    display: none;;
}


#toggle-category h3{
    display: none;
}

#toggle-category img{
    position: relative;
    bottom: 1em;
}

.scroll{
    display: none;
}



}



@media only screen and (max-width: 680px){
    }


@media only screen and (max-width: 657px){
    
    /* .nav-link{
        
        margin-left: 0;
        padding: 0 10px;
        position: relative;
       
    }

    nav{
        
        right: 15px;
    }  */

    /* #toggle-category{
        justify-content: flex-start;
        bottom: 3.4em;
        left: 1em;
        padding-top: 30px;
    } */
    
    footer p{
        font-size: .6rem;
    }

    /* #toggle-category img{
        padding: 0 .2em 0 2em;
    } */
   



}


@media only screen and (max-width: 560px){

    #selected-plant h2{
        font-size: 1.3rem;
    }

    #toggle-category{
        
        bottom: 3.8em;
    }
    

}

@media only screen and (max-width: 510px){

    #selected-plant h2{
        font-size: 1.2rem;
        padding-bottom: 5px;
    }

    #toggle-category{
        
        bottom: 3.8em;
    }
    

}
/* ... */

